--- a/Server01/web/error/error.css
+++ b/Server01/web/error/error.css
@@ -1,59 +1,106 @@
-
 *{
-    user-select: none;
-    /* 无法选中，整体感更强 */
-} 
-
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 body{
-    background: url(../login/res/wallpaper.jpg) no-repeat;  /* http会去掉../ */
-    background-size: cover;
-    background-attachment: fixed;
+  height: 100vh;
+  background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+  background-size: 400%;
 }
-
-.login{
-    position: absolute;
-    top: 50%;
-    margin-top: -200px;
-    left: 50%;
-    margin-left: -200px;
-    /* absolute居中的一种方法 */
-    background-color: whitesmoke;
-    width: 400px;
-    height: 400px;
-    border-radius: 25px;
-    text-align: center;
-    padding: 5px 40px;
-    box-sizing: border-box;
-    /* 这样padding就不会影响大小 */
+#error-page{
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  right: 15%;
+  bottom: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
-
-p{
-    font-size: 42px;
-    font-weight: 600;
+#error-page .content{
+  max-width: 600px;
+  text-align: center;
 }
-
-input{
-    background-color: whitesmoke;
-    width: 100%;
-    height: 48px;
-    margin-bottom: 10px;
-    border: none;
-    border-bottom: 2px solid silver;
-    /* 下面的会覆盖上面的步伐 */
-    outline: none;
-    font-size: 22px;
+.content h1{
+  font-size: 18vw;
+  line-height: 1em;
+  position: relative;
 }
-
-.btn{
-    background-color: #59c2c5;
-    width: 38%;
-    height: 48px;
-    border-radius: 8px;
-    margin-top: 40px;
-    font-size: 28px;
-    font-weight: 600;
-    color: white;
+.content h1:after{
+  position: absolute;
+  content: attr(data-text);
+  top: 0;
+  left: 0;
+  right: 0;
+  background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 1px 1px 2px rgba(255,255,255,0.25);
+  animation: animate 10s ease-in-out infinite;
 }
-.btn:hover{
-    background-color: #59c2a0;
+@keyframes animate {
+  0%{
+    background-position: 0 0;
+  }
+  25%{
+    background-position: 100% 0;
+  }
+  50%{
+    background-position: 100% 100%;
+  }
+  75%{
+    background-position: 0% 100%;
+  }
+  100%{
+    background-position: 0% 0%;
+  }
+}
+.content h4{
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #000;
+  font-size: 2em;
+  max-width: 600px;
+  position: relative;
+}
+.content h4:after{
+  position: absolute;
+  content: attr(data-text);
+  top: 0;
+  left: 0;
+  right: 0;
+  text-shadow: 1px 1px 2px rgba(255,255,255,0.4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.content p{
+  font-size: 1.2em;
+  color: #0d0d0d;
+}
+.content .btns{
+  margin: 25px 0;
+  display: inline-flex;
+}
+.content .btns a{
+  display: inline-block;
+  margin: 0 10px;
+  text-decoration: none;
+  border: 2px solid #69a6ce;
+  color: #69a6ce;
+  font-weight: 500;
+  padding: 10px 25px;
+  border-radius: 25px;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+.content .btns a:hover{
+  background: #69a6ce;
+  color: #fff;
 }
